# LuckyGas

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  2025-07-16-this-session-is-being-continued-from-a-previous-co.txt  APP_JS_REDUCTION_SUMMARY.md  CLAUDE.md  CLAUDE_TEMPLATE.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CODE_IMPROVEMENT_PLAN.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FINAL_MODULARIZATION_REPORT.md  FINAL_REFACTORING_REPORT.md  FIXED_FEATURES_SUMMARY.md  IMPROVEMENT_PREVIEWS.md  INTERFACE_TEST_REPORT.md  MECHANICAL_APPLICATION_REPORT.md  MODULARIZATION_PROGRESS.md  README.md  REFACTORING_SUMMARY.md  UNUSED_API_COMPONENTS_REPORT.md  cleanup_redundant_files.sh  cleanup_unnecessary_code.sh  config_management_report.md  demo_enhanced_features.md  deploy.sh  docker-compose.yml  local.db  main.py  playwright.config.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_demo_data.py  start_api.sh  (+11 more)
docs/: API_REFERENCE.md  APP_JS_CLEANUP_PLAN.md  APP_JS_CLEANUP_REPORT.md  APP_JS_IMPROVEMENT_PLAN.md  APP_JS_IMPROVEMENT_SUMMARY.md  APP_JS_REFACTOR_EXAMPLES.md  APP_JS_SHRINK_PLAN.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_REPORT.md  COMP-005.1-REACTIVE-COMPONENTS-REPORT.md  CORS_SECURITY.md  CRITICAL_ARCHITECTURE_DECISION.md  DELIVERY_TABS_FEATURE.md  DOCKER_DEPLOYMENT.md  ES6_MODULE_ANALYSIS.md  FIX_TAB_SWITCHING_ERROR.md  MANUAL_CLEANUP_GUIDE.md  MOD-002.1-FILE-STRUCTURE-REPORT.md  MODERNIZATION_COMPLETE.md  NAVIGATION.md  PARALLEL_EXECUTION_SUMMARY.md  TEST_REPORT.md  (+22 more)
(+243 files in other folders)
