[project]
name = "luckygas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "googlemaps==4.10.0",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "openpyxl==3.1.5",
    "ortools==9.14.6206",
    "pandas>=2.3.1",
    "passlib[bcrypt]==1.7.4",
    "playwright==1.53.0",
    "pydantic==2.11.7",
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-playwright==0.7.0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "scikit-learn==1.7.0",
    "sqlalchemy==2.0.41",
    "uvicorn==0.35.0",
]
